--- a/kube-manifests/01-Deployment-and-LoadBalancer-Service.yml
+++ b/kube-manifests/01-Deployment-and-LoadBalancer-Service.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: app1-nginx
-          image: myacrcontainerregistry1389.azurecr.io/app1
+          image: acrtestmarch.azurecr.io/acrtestmarch:206
           ports:
             - containerPort: 80
 ---
